<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ LEAPS - Low Energy Accurate Positioning System.
  ~
  ~ Copyright (c) 2016-2017, LEAPS. All rights reserved.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Progress -->
    <item
        android:id="@+id/action_progress"
        android:orderInCategory="80"
        android:title=""
        app:showAsAction="always"/>

    <!-- Instructions -->
    <item
        android:id="@+id/action_instructions"
        android:orderInCategory="85"
        android:title="@string/screen_title_instructions"
        android:icon="@drawable/ic_help_white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_show_errors"
        android:orderInCategory="90"
        android:title="@string/menu_show_errors"
        android:icon="@drawable/ic_exclamation_sign"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_rename"
        android:title="@string/menu_rename"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_forget"
        android:title="@string/menu_forget"
        android:orderInCategory="120"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_firmware_status"
        android:title="@string/menu_firmware_status"
        android:orderInCategory="140"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_autopositioning"
        android:title="@string/menu_autopositioning"
        android:orderInCategory="160"
        app:showAsAction="never"/>

</menu>