<?xml version="1.0" encoding="utf-8"?>
<!--
~ LEAPS - Low Energy Accurate Positioning System.
~
~ Copyright (c) 2016-2017, LEAPS. All rights reserved.
-->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/grid_bottom_shadow_height"
        android:layout_gravity="bottom"
        android:layout_marginTop="0dp"
        android:background="@drawable/grid_bottom_shadow"/>

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0FFFFFF"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="horizontal"
        android:paddingStart="@dimen/node_value_left_padding"
        android:paddingEnd="@dimen/node_value_left_padding"
        android:paddingBottom="@dimen/activity_vertical_half_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            style="@style/NodeDetailPositionCompound"
            android:hint="@string/floorplan_center_x_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/floorplan_center_x"
                style="@style/editText.pixel"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            style="@style/NodeDetailPositionCompound"
            android:hint="@string/floorplan_center_y_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/floorplan_center_y"
                style="@style/editText.pixel"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/floorplan_zoom_factor_hint"
            style="@style/NodeDetailPositionCompound"
            android:hint="@string/floorplan_pixel_hint">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/floorplan_zoom_factor"
                style="@style/editText.pixel"/>

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

</LinearLayout>